--- a/WpfEssentials.SampleApp/App.xaml
+++ b/WpfEssentials.SampleApp/App.xaml
@@ -1,7 +1,18 @@
 ﻿<Application x:Class="WpfEssentials.SampleApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:sampleApp="clr-namespace:WpfEssentials.SampleApp">
     <Application.Resources>
-         
+        <Style TargetType="sampleApp:MyTestControl">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="sampleApp:MyTestControl">
+                        <Border BorderThickness="1" BorderBrush="Black">
+                            <TextBlock Text="TestControl"></TextBlock>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
