Upgraded to .Net 8 and added some extension methods

--- a/WpfEssentials.SampleApp/App.xaml
+++ b/WpfEssentials.SampleApp/App.xaml
@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:sampleApp="clr-namespace:WpfEssentials.SampleApp"
-             xmlns:wpfEssentials="clr-namespace:WpfEssentials;assembly=WpfEssentials">
+             xmlns:extensions="clr-namespace:WpfEssentials.Extensions;assembly=WpfEssentials">
     <Application.Resources>
-        <wpfEssentials:EnumDescriptionConverter x:Key="EnumDescriptionConverter" />
+        <extensions:EnumDescriptionConverter x:Key="EnumDescriptionConverter" />
 
         <Style TargetType="sampleApp:MyTestControl">
             <Setter Property="Template">
